update  github link

--- a/stage-1/index.html
+++ b/stage-1/index.html
@@ -34,7 +34,7 @@
             <h2 data-testid="myTrack">Track: Frontend</h2>
 
 
-            <a href="https://github.com/kibetrns" target="_blank" data-testid=“githubURL”>
+            <a href="https://github.com/kibetrns/HNGx-Frontend/tree/main/stage-1" target="_blank" data-testid=“githubURL”>
                 <h2>GitHub</h2>
             </a>
 
